fix margins to make stuff work on safari

--- a/css/main.sass
+++ b/css/main.sass
@@ -225,7 +225,7 @@ section
     &.line2
       animation-delay: 300ms
       margin-top: 2px
-      width: 468px
+      width: 475px
       float: right
     &.line3
       animation-delay: 800ms
